# BayesAir

./: .gitignore  Digraph.gv  LICENSE  README.md  pyproject.toml
analysis/: top_3_posterior_samples.csv
bayes_air/: aircraft.py  airport.py  crew.py  model.py  network.py  schedule.py  state.py  util.py
bayes_air/components/: aircraft.py  airport.py
bayes_air/types/: __init__.py  airport.py  flight.py  util.py
bayes_air/utils/: dataloader.py  zuko2pyro.py
data/: airport_locations.csv
notebooks/: Intro to Pyro.ipynb  air_traffic_modelling.ipynb
scripts/: flight_data_converter.py  pyro_test.py  run_all.sh  sweep.yml  sweep_inference.py  train_script.sh  training.py  two_airport_network.py  utils.py  wn_network.py
scripts/mnist/: ablations.sh  experiments.sh  model.py  train.py
scripts/notebooks/: av.ipynb  av_with_mobil.ipynb  cifar.ipynb  flow_test cal.ipynb  flow_test.ipynb  gaussian_toy_example.ipynb  mnist.ipynb  seismic.ipynb  toy_example.ipynb  toy_example_zuko copy.ipynb  toy_example_zuko.ipynb  uav.ipynb  uav_data_analysis.ipynb  uav_post_analysis.ipynb  wn_exploratory.ipynb
scripts/notebooks/models/: uav_balanced.pt  uav_kl.pt
scripts/plotting/: plot_sensitivity.py
scripts/seismic/: eval.py  experiments.sh  model.py  scratch.ipynb  scratch.py  train.py  visualizations.ipynb
scripts/swi/: ablations.sh  classification.py  eval.py  experiments.sh  model.py  scratch.py  sensitivity.sh  train.py  train_old.py
scripts/two_moons/: ablations.sh  experiments.sh  model.py  sensitivity.sh  train.py
scripts/uav/: ablations.sh  data.py  experiments.sh  model.py  sensitivity.sh  train.py
scripts/wn/: ablations.sh  classification.py  experiments.sh  train.py  wn_plot_results.py
scripts/wn/data_analysis/: daily-top10-analysis-cancel.ipynb  daily-top10-analysis-nocancel.ipynb  top10-analysis.ipynb  top4-analysis.ipynb
scripts/wn/data_analysis/models/: top-10-cancel-failure_checkpoint_299.pt  top-10-daily-cancel-failure_checkpoint_499.pt  top-10-daily-nocancel-failure_checkpoint_499.pt  top-10-nocancel-failure_checkpoint_299.pt  top-4-cancel-failure_checkpoint_299.pt  top-4-nocancel-failure_checkpoint_299.pt
tests/: test_schedule.py
tests/types/: test_airport.py
