[tool.poetry]
name = "bayes-air"
version = "0.0.1"
description = "A framework for Bayesian modeling and analysis of air transportation network dynamics"
authors = ["Charles Dawson <charles.dwsn@gmail.com>"]
license = "BSD 3-Clause"
readme = "README.md"
packages = [{include = "bayes_air"}]

[tool.poetry.dependencies]
python = "<3.13,>=3.9"
pyro-ppl = "^1.8.6"
torch = "^2.1.0"
pandas = "^2.1.0"
numpy = "^1.26.0"
matplotlib = "^3.8.0"
seaborn = "^0.13.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
