[tool.poetry]
name = "bayes-air"
version = "0.0.2"
description = "A framework for Bayesian modeling and analysis of air transportation network dynamics"
authors = ["Charles Dawson <charles.dwsn@gmail.com>"]
license = "BSD 3-Clause"
readme = "README.md"
packages = [{include = "bayes_air"}]

[tool.poetry.dependencies]
python = "<3.12,>=3.9"
pyro-ppl = "^1.8.6"
pandas = "^2.1.0"
numpy = "^1.26.0"
matplotlib = "^3.8.0"
seaborn = "^0.13.0"
torch = [{version = "^2.1.0+cu118", source = "pytorch", platform = "linux"}, {version = "^2.1.0", source = "PyPI", platform = "darwin"}]
graphviz = "^0.20.1"
openpyxl = "^3.1.2"
tqdm = "^4.66.1"
timezonefinder = "^6.2.0"
pytz = "^2023.3.post1"
wandb = "^0.16.1"
plotly = "^5.18.0"
click = "^8.1.7"
zuko = "^1.0.1"
deepwave = "^0.0.20"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.1"

ipykernel = "^6.25.2"
pytest = "^7.4.3"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu118"
priority = "supplemental"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"